# job_regression

./: (done)(processed)converted_salary.csv  (done)(processed)fa_user_.csv  (done)(raw)fa_sitemap.csv  (done)(raw)fa_user_.csv  (raw)fa_business_time.csv  (raw)job_tags.csv  detail.csv  fa_dollar_sign  fa_map_marker_alt.csv  main.py  profession.csv  pyproject.toml  whathapopen
