
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "QSnake", email = "jester36883688@gmail.com"},
    {name = "", email = ""},
]
dependencies = [
    "pandas>=2.1.3",
    "pyarrow>=14.0.1",
    "fastparquet>=2023.10.1",
    "scikit-learn>=1.3.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
